<resources>
    <string name="app_name">ForExMgt</string>
    <string name="facebook_application_id">776315792727800</string>
    <string name="facebook_app_id">776315792727800</string>

    <string name="title_exchange_rate_list">匯率表</string>
    <string name="title_book_list">帳簿</string>
    <string name="title_asset_report">資產總覽</string>

    <string name="template_slash_with_2_string">%1s / %2s</string>
    <string name="template_fcy_balance">%1s餘額</string>
    <string name="template_currency_amount">%1s  %2s</string>

    <string name="ok">確定</string>
    <string name="add">新增</string>
    <string name="cancel">取消</string>
    <string name="mandatory_field">必填欄位</string>
    <string name="insufficient_fcy_amt">外幣餘額不足</string>
    <string name="load_book_error">載入帳簿時發生錯誤</string>
    <string name="load_entry_error">載入紀錄時發生錯誤</string>
    <string name="load_exchange_rate_error">取得匯率資料失敗</string>
    <string name="generate_asset_report_error">產生報表時發生錯誤</string>
    <string name="credit_type_not_selected">未選擇轉入類型</string>

    <string name="sign_out_successfully">登出成功</string>
    <string name="create_successfully">新增成功</string>
    <string name="create_failed">新增失敗</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string name="choose_bank">選擇銀行</string>
    <string name="cost_credit">成本轉入</string>
    <string name="interest_credit">利息轉入</string>
    <string name="default_browsing_rate">預設查看%1s匯率</string>

    <string name="title_create_book">建立帳本</string>
    <string name="desc_create_book">請輸入帳本名稱並選擇幣別。其中幣別一旦設定完成，便無法再更改。</string>
    <string name="book_name">帳本名稱</string>
    <string name="please_wait">請稍後…</string>
    <string name="desc_create_balance_entry">以下為本帳簿的餘額狀態，確認後可點擊「新增」來儲存紀錄。</string>

    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="fcy_amt_credit">轉入外幣</string>
    <string name="fcy_amt_debit">轉出外幣</string>
    <string name="twd_amt_credit">獲得臺幣</string>
    <string name="twd_amt_debit">臺幣價值</string>

    <string name="title_create_credit_entry">新增轉入紀錄</string>
    <string name="title_create_debit_entry">新增轉出紀錄</string>

    <string name="tab_credit">轉入</string>
    <string name="tab_debit">轉出</string>
    <string name="tab_balance">結餘</string>

    <string name="label_amount">金額</string>
    <string name="label_exchange_rate">匯率：</string>
    <string name="label_avg_cost">平均成本：</string>
    <string name="label_twd_value">臺幣價值</string>
    <string name="label_amount_and_profit">實領 / 利差</string>
    <string name="label_pv_and_profit">現值 / 利差</string>
    <string name="label_pv_and_cost">現值 / 成本</string>
    <string name="label_twd">TWD</string>
    <string name="label_spot_rate">即期匯率</string>
    <string name="label_spot_rate_colon">即期匯率：</string>
    <string name="label_twd_present_value">臺幣現值</string>
    <string name="label_profit">利差</string>


</resources>
