<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.EntryEditActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:titleTextColor="#FFFFFF"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="@dimen/edit_entry_edit_text_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:errorEnabled="true">

            <EditText
                    android:id="@+id/edtDate"
                    style="@style/DefaultEditText"
                    android:hint="@string/date"
                    android:editable="false"
                    android:clickable="true"
                    android:focusable="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFcyAmt"
                android:layout_width="@dimen/edit_entry_edit_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilDate"
                android:layout_centerHorizontal="true"
                app:errorEnabled="true">

            <EditText
                    android:id="@+id/edtFcyAmt"
                    style="@style/DefaultEditText"
                    android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTwdAmt"
                android:layout_width="@dimen/edit_entry_edit_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilFcyAmt"
                android:layout_centerHorizontal="true"
                app:errorEnabled="true">

            <EditText
                    android:id="@+id/edtTwdAmt"
                    style="@style/DefaultEditText"
                    android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
                android:id="@+id/rgpCreditType"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/tilTwdAmt"
                android:layout_centerHorizontal="true">

            <RadioButton
                    android:id="@+id/rdoCost"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_credit"
                    android:textColor="@color/black1"/>

            <RadioButton
                    android:id="@+id/rdoInterest"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/interest_credit"
                    android:textColor="@color/black1"/>

        </RadioGroup>

        <Button
                android:id="@+id/btnSubmit"
                style="@style/ActionButton"
                android:layout_below="@id/rgpCreditType"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/submit"/>

        <Button
                android:id="@+id/btnBack"
                style="@style/ActionButton"
                android:layout_below="@id/btnSubmit"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/widget_default_spacing"
                android:text="@string/back"/>

    </RelativeLayout>

</RelativeLayout>