<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

    <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black4"/>

    <TextView
            android:id="@+id/txtDebitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txtFcyAmt"
            android:textSize="13sp"
            android:textColor="@color/black3"
            android:text="@string/label_amount"/>

    <TextView
            android:id="@+id/txtFcyAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDate"
            android:layout_alignEnd="@id/txtTwdAmt"
            android:textSize="20sp"
            android:textColor="@color/amount_debit"/>

    <TextView
            android:id="@+id/txtFcyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtDate"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textColor="@color/amount_debit"/>

    <TextView
            android:id="@+id/txtTwdAmtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txtTwdAmt"
            android:textSize="13sp"
            android:textColor="@color/black3"
            android:text="@string/label_twd_value"/>

    <TextView
            android:id="@+id/txtTwdAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/txtTwdLabel"
            android:layout_toStartOf="@id/txtTwdLabel"
            android:textSize="20sp"
            android:textColor="@color/black3"/>

    <TextView
            android:id="@+id/txtTwdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFcyAmt"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textColor="@color/black3"
            android:text="@string/label_twd"/>

    <TextView
            android:id="@+id/txtExRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black3"
            android:layout_alignBottom="@id/txtExRateValue"
            android:layout_toStartOf="@id/txtExRateValue"
            android:text="@string/label_exchange_rate"/>

    <TextView
            android:id="@+id/txtExRateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/black3"
            android:layout_below="@id/txtTwdLabel"
            android:layout_alignParentEnd="true"/>

</RelativeLayout>